# portfolio_rust

./: Cargo.toml  README.md  index.html
src/: main.rs
src/assets/fonts/Calibre/: stylesheet.css
src/assets/fonts/SFMono/: stylesheet.css
src/assets/i18n/: en.json  es.json
src/components/: about.rs  banner.rs  contact.rs  footer.rs  header.rs  home.rs  jobs.rs  mod.rs  other_projects.rs  projects.rs
src/styles/: about.scss  banner.scss  contact.scss  fonts.scss  footer.scss  header.scss  jobs.scss  other-projects.scss  projects.scss  styles.scss  variables.scss
src/web_utils/: html_parser.rs  mod.rs  web_content.rs
