[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = "0.3.61"
yew-bootstrap = "0.5.10"
gloo = "0.8.0"
yew_icons = {version = "0.7", features = ["BootstrapTelegram", "BootstrapInstagram", "BootstrapTwitter", "BootstrapLinkedin", "BootstrapGithub", "OcticonsLinkExternal16"]}
